# local_sampler

./: .gitignore  AGENTS.md  README.md  main.py  main_isfm.py  model.py  pyproject.toml  run.sh  training_flow.ipynb  utils.py
configs/: gmm.yaml
configs/hydra/: ignore_log.yaml
locally_tilted_sampler/: __init__.py  densities.py  flow.py  segment_flow_matching.py  utils.py
scritps/: run_gmm40.sh  run_gmm40_isfm.sh  run_gmm9.sh  run_gmm9_isfm.sh
target_dists/: mogs.py
